[gd_scene load_steps=6 format=3 uid="uid://6wmwq4j7jm3k"]

[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/TaskPanel/TaskLine.gd" id="1_q637i"]
[ext_resource type="Texture2D" uid="uid://b261vuqbyde61" path="res://addons/HTNDomainManager/PluginSystem/Icons/Trash.svg" id="2_st317"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syfyt"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.952941, 0.360784, 0.364706, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ytp66"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g6iv2"]

[node name="TaskLine" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q637i")

[node name="Delete" type="Button" parent="."]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_syfyt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ytp66")
icon = ExtResource("2_st317")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_g6iv2")

[node name="TaskName" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Task Name"

[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="TaskName" to="." method="_on_task_name_pressed"]
